--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header>
     <div class="logo" >
-        <img  src="../Integration_maquette_Blaz/Logo.png ">
+        <img  src="../Integration_maquette_Blaz/ressources/Logo.png ">
 
     </div>
 
@@ -61,15 +61,15 @@
 
 <section class="contenu">
     <div class="ligne1">
-        <div><img src="design quality.png" ></div>
-        <div><img src="built to last.png"></div>
-        <div><img src="our clients.png"></div>
-        <div><img src="how to shoo.png"></div>
+        <div><img src="../Integration_maquette_Blaz/ressources/design quality.png" ></div>
+        <div><img src="../Integration_maquette_Blaz/ressources/built to last.png"></div>
+        <div><img src="../Integration_maquette_Blaz/ressources/our clients.png"></div>
+        <div><img src="../Integration_maquette_Blaz/ressources/how to shoo.png"></div>
     </div>
     <div class="ligne2">
-        <div><img src="signUp.png"></div>
-        <div><img src="perfect pictures.png"></div>
-        <div><img src="start.png"></div>
+        <div><img src="../Integration_maquette_Blaz/ressources/signUp.png"></div>
+        <div><img src="../Integration_maquette_Blaz/ressources/perfect pictures.png"></div>
+        <div><img src="../Integration_maquette_Blaz/ressources/start.png"></div>
     </div>
     
 </section>
