modif image entete

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <section>
 
-    <img src="Section1.png">
+    <img src="../Integration_maquette_Blaz/ressources/Section1.png">
 </section>
 <section class="description">
     <div class="descri_gauche"> 
